[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-open-env"
version = "1.0.0"
description = "Deterministic OpenEnv environment for realistic email inbox triage."
authors = [
    { name = "Amrutha", email = "amrutha@example.com" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "PyYAML",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:start"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "server*"]
